edit description meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Track steam users bans"
+      content="This is a tool which allows you to track the ban status for any STEAMID and if you wish you can save it to a list. Optionally you can get notified via discord or email when the user gets banned!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
